# trabalho-vc

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  main.cpp
include/: main.h  vc.h  video.h
lib/: CMakeLists.txt  cmake_install.cmake  vc.cpp  vc.h  vclib.vcxproj  vclib.vcxproj.filters
lib/Debug/: vclib.lib
lib/vclib.dir/Debug/: vclib.lib.recipe
lib/vclib.dir/Debug/vclib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  vclib.lastbuildstate
src/: CodigoExemplo.cpp  main.cpp  vc.c
